<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tool_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/my_skyBlue"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:src="@drawable/ic_search" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topSearchBarInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@drawable/custom_design"
                android:fontFamily="@font/acme"
                android:hint="@string/enter_url"
                android:padding="12dp"
                android:singleLine="true"
                android:textColorHint="#757575" />

            <ImageButton
                android:id="@+id/GoButton"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/go_button"
                android:padding="3dp"
                android:src="@drawable/ic_arrow_forward"
                tools:ignore="RedundantDescriptionCheck" />
        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.5" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/myPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings_button"
        android:src="@drawable/ic_settings"
        app:backgroundTint="#728DD3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>